--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello Word!!! :)</title>
     <style>
         body {
-            background-color: green;
+            background-color: blue;
             color: white;
             display: flex;
             justify-content: center;
